--- a/.github/workflows/desafio1-c.yml
+++ b/.github/workflows/desafio1-c.yml
@@ -18,13 +18,13 @@ jobs:
         echo "Rama actual: ${{ github.ref_name }}"
 
   Sumar_main:
-    if: ${{ github.ref_naame == 'main' }}
+    if: ${{ github.ref_name == 'main' }}
     needs: detectar
     runs-on: ubuntu-latest
     steps:
     - name: Sumar
       run: |
-        $RESULTADO=$((NUM_A + NUM_B))
+        RESULTADO=$((NUM_A + NUM_B))
         echo "El resultado de $NUM_A + $NUM_B es: $RESULTADO"
 
   Restar_develop:
@@ -34,6 +34,6 @@ jobs:
     steps:
     - name: Restar
       run: |
-        $RESULTADO=$((NUM_A - NUM_B))
+        RESULTADO=$((NUM_A - NUM_B))
         echo "El resultado de $NUM_A - $NUM_B es: $RESULTADO"
 
