--- a/build-and-test/ci-python.yml
+++ b/build-and-test/ci-python.yml
@@ -10,6 +10,11 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: build-and-test/app-python
+      
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -32,7 +37,7 @@ jobs:
         pytest --cov=app --cov-report=term --cov-report=html
 
     - name: Guardar reporte
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: coverage-report 
         path: htmlcov/
