--- a/.github/workflows/ci-python-desafio.yml
+++ b/.github/workflows/ci-python-desafio.yml
@@ -10,11 +10,15 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: build-and-test/desafio2-python
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: COnfigurar python
+    - name: Configurar python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
@@ -32,7 +36,7 @@ jobs:
         pytest --cov=desafio2 --cov-report=term --cov-report=html
 
     - name: Guardar reporte
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: coverage-report 
         path: htmlcov/
