--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -10,12 +10,17 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: build-and-test/app-python
+      
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
 
     - name: COnfigurar python
-      uses: actions/seetup-python@v4
+      uses: actions/setup-python@v4
       with:
         python-version: '3.11'
 
@@ -32,7 +37,7 @@ jobs:
         pytest --cov=app --cov-report=term --cov-report=html
 
     - name: Guardar reporte
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: coverage-report 
         path: htmlcov/
