--- a/build-and-test/ci-python-desafio.yml
+++ b/build-and-test/ci-python-desafio.yml
@@ -10,11 +10,15 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: build-and-test/desafio2-python
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: COnfigurar python
+    - name: Configurar python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
