--- a/.github/workflows/ci-matrix-desf.yml
+++ b/.github/workflows/ci-matrix-desf.yml
@@ -9,6 +9,11 @@ on:
 jobs:
   test-matrix:
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: build-and-test/desafio2-python
+
     strategy:
       matrix:
         python-version: ['3.9', '3.10', '3.11']
