--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -30,10 +30,12 @@ jobs:
 
     - name: Ejecutar tests
       run: |
+        export PYTHONPATH=$PYTHONPATH:.
         pytest tests/ -v
 
     - name: Ejecutar con cobertura
       run: |
+        export PYTHONPATH=$PYTHONPATH:.
         pytest --cov=app --cov-report=term --cov-report=html
 
     - name: Guardar reporte
