--- a/.github/workflows/ci-matrix-desf.yml
+++ b/.github/workflows/ci-matrix-desf.yml
@@ -26,8 +26,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - run: pip install -r requirements.txt
-    - run: export PYTHONPATH=$PYTHONPATH:.
-    - run: pytest tests/ -v
+    - name: Ejecutar tests
+      run: |
+        export PYTHONPATH=$PYTHONPATH:.
+        pytest tests/ -v
         
     - name: Verificar desafio corriendo
       run: |
