--- a/.github/workflows/ci-matrix-py.yml
+++ b/.github/workflows/ci-matrix-py.yml
@@ -27,7 +27,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - run: pip install -r requirements.txt
-    - run: pytest tests/ -v
+    - name: Ejecutar tests
+      run: |
+        export PYTHONPATH=$PYTHONPATH:.
+        pytest tests/ -v
         
     - name: Verificar app corriendo
       run: |
